--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -2,4 +2,39 @@
 
 {% block content %}
 Welcome to Tweet me.com
+
+<div id="tweets">
+    Replace me
+</div>
+
+<script>
+    const tweetsElement = document.getElementById("tweets")
+    tweetsElement.innerHTML = "Loading..........  "
+
+
+    var el1 = "<h1> Hello  there 1</h1>"
+    var el2 = "<h1> Hello  there 2</h1>"
+    var el3 = "<h1> Hello  there 3</h1>"
+    tweetsElement.innerHTML = el1 + el2 + el3
+
+    
+    const xhr = new XMLHttpRequest() 
+    const method = 'GET'
+    const url = '/tweets'
+    const responseType = "json"
+
+    xhr.responseType = responseType
+    xhr.open(method,url)
+    xhr.onload = function() {
+        const serverResponse = xhr.response
+        var listedItems = serverResponse.response
+        console.log(listedItems)
+
+    }
+    xhr.send()
+
+
+</script>
+
+
 {% endblock content %}
