--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -4,32 +4,59 @@
 Welcome to Tweet me.com
 
 <div id="tweets">
-    Replace me
+   Loading ...... ....
 </div>
 
 <script>
     const tweetsElement = document.getElementById("tweets")
-    tweetsElement.innerHTML = "Loading..........  "
+    // tweetsElement.innerHTML = "Loading..........  "
 
 
-    var el1 = "<h1> Hello  there 1</h1>"
-    var el2 = "<h1> Hello  there 2</h1>"
-    var el3 = "<h1> Hello  there 3</h1>"
-    tweetsElement.innerHTML = el1 + el2 + el3
+    // var el1 = "<h1> Hello  there 1</h1>"
+    // var el2 = "<h1> Hello  there 2</h1>"
+    // var el3 = "<h1> Hello  there 3</h1>"
+    // tweetsElement.innerHTML = el1 + el2 + el3
 
-    
+
     const xhr = new XMLHttpRequest() 
     const method = 'GET'
     const url = '/tweets'
     const responseType = "json"
 
+    function handleDidLike (tweet_id,currentCount){
+        console.log(tweet_id,currentCount)
+        currentCount++
+        return 
+    }
+
+    function LikeBtn(tweet){
+        return "<button class='btn btn-primary btn-sm' onclick=handleDidLike(" + 
+        tweet.id + "," +  tweet.likes + ")>" + tweet.likes +  " Likes </button>"
+    }
+
+    function formatTweetElement(tweet){
+        var formattedTweet = "<div class = 'mb-4 tweet' id ='tweet-" + tweet.id 
+        + "'><p>" + tweet.content +
+           "</p><div class = 'btn-group'>" + LikeBtn(tweet) + 
+            " </div> </div>"
+        return formattedTweet
+    }
+
     xhr.responseType = responseType
     xhr.open(method,url)
     xhr.onload = function() {
-        const serverResponse = xhr.response
-        var listedItems = serverResponse.response
-        console.log(listedItems)
-
+        const serverResponse = xhr.response 
+        const listedItems = serverResponse.response
+        var finalTweetStr = ""
+        var i;
+        for (i=0; i<listedItems.length; i++) {
+            // var currentItem = "<h1>" + listedItems[i].id + "</h1>" +"<p>" + listedItems[i].content + "</p>"
+            var tweetObj = listedItems[i]
+            var currentItem = formatTweetElement(tweetObj)
+            finalTweetStr += currentItem
+        }
+        tweetsElement.innerHTML = finalTweetStr
+        // console.log(listedItems)
     }
     xhr.send()
 
