Navbar added and contents aligned

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-Welcome to Tweet me.com
 
-<div id="tweets">
+<div class ="row text-center">
+    <div class="col">
+        <h2>Welcome to Tweet me</h2>
+    </div>  
+</div>
+
+
+<div class='row' id= "tweets">
    Loading ...... ....
 </div>
 
@@ -35,7 +41,7 @@ Welcome to Tweet me.com
     }
 
     function formatTweetElement(tweet){
-        var formattedTweet = "<div class = 'mb-4 tweet' id ='tweet-" + tweet.id 
+        var formattedTweet = "<div class = 'col-12 col-md-10 mx-auto border rounded py-3 mb-4 tweet' id ='tweet-" + tweet.id 
         + "'><p>" + tweet.content +
            "</p><div class = 'btn-group'>" + LikeBtn(tweet) + 
             " </div> </div>"
