--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,22 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-
+    <style>
+      .bg-dark {
+    background-color: #910e0e!important;
+      }
+    </style>
     <title>Tweetme.com</title>
   </head>
   <body>
-    {% block content %}
 
-    {% endblock content %}
+    {% include "components/navbar.html" %}
+    <div class="container">
+      {% block content %}
+
+      {% endblock content %}
+    </div>
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
